--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,6 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
-<include android:layout="@layout/content_main" />
+<include layout="@layout/content_main" />
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
