--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -1,91 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/viewBg"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.khangse.movieapp.DetailActivity"
     tools:showIn="@layout/activity_detail">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/movietitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/layout_margin_left"
-                android:text="@string/name_movie"
-                android:textAlignment="center"
-                android:layout_marginTop="@dimen/layout_margin_top"
-                android:textStyle="bold"
-                android:textSize="25sp"
-                android:layout_marginBottom="50dp"/>
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/layout_margin_left"
-                android:text="title"
-                android:layout_marginTop="@dimen/layout_margin_top"
-                android:textSize="20sp"
-                android:layout_below="@+id/movietitle"
-                android:layout_marginBottom="50dp"/>
-            <TextView
-                android:id="@+id/plotsynopsis"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/layout_margin_left"
-                android:text="@string/plot"
-                android:layout_marginTop="@dimen/layout_margin_top"
-                android:textSize="20sp"
-                android:layout_below="@+id/title"
-                android:layout_marginBottom="50dp"/>
-            <TextView
-                android:id="@+id/rating"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/layout_margin_left"
-                android:text="@string/rating"
-                android:layout_marginTop="@dimen/layout_margin_top"
-                android:textSize="20sp"
-                android:layout_below="@+id/plotsynopsis"
-                android:layout_marginBottom="50dp"/>
-            <TextView
-                android:id="@+id/userrating"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/layout_margin_left"
-                android:text="@string/rating"
-                android:layout_marginTop="@dimen/layout_margin_top"
-                android:textSize="20sp"
-                android:layout_below="@+id/rating"
-                android:layout_marginBottom="50dp"/>
-            <TextView
-                android:id="@+id/release"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/layout_margin_left"
-                android:text="@string/release"
-                android:layout_marginTop="@dimen/layout_margin_top"
-                android:textSize="20sp"
-                android:layout_below="@+id/userrating"
-                android:layout_marginBottom="50dp"/>
-            <TextView
-                android:id="@+id/releasedate"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/layout_margin_left"
-                android:text="@string/release"
-                android:layout_marginTop="@dimen/layout_margin_top"
-                android:textSize="20sp"
-                android:layout_below="@+id/release"
-                android:layout_marginBottom="50dp"/>
-        </RelativeLayout>
 
-    </ScrollView>
+    <LinearLayout
+        android:id="@+id/ad"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:showIn="@layout/activity_detail">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/layout_margin_left"
+                    android:layout_marginTop="@dimen/layout_margin_top"
+                    android:text="@string/name_movie"
+                    android:textSize="20sp"
+                    app:layout_constraintLeft_creator="1"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_creator="1"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/userrating"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/layout_margin_left"
+                    android:layout_marginTop="@dimen/layout_margin_top"
+                    android:text="@string/rating"
+                    android:textSize="20sp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_creator="1"
+                    app:layout_constraintTop_toBottomOf="@+id/title" />
+
+                <TextView
+                    android:id="@+id/plotsynopsis"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/layout_margin_left"
+                    android:layout_marginTop="@dimen/layout_margin_top"
+                    android:text="@string/plot"
+                    android:textSize="20sp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/userrating" />
+
+                <TextView
+                    android:id="@+id/releasedate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/layout_margin_left"
+                    android:layout_marginTop="@dimen/layout_margin_top"
+                    android:text="@string/release"
+                    android:textSize="20sp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/plotsynopsis" />
+
+                <TextView
+                    android:id="@+id/thumbnailUrl"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="invisible" />
+
+                <TextView
+                    android:id="@+id/trailer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/trailer"
+                    android:textSize="20sp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/releasedate" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/recycler_view1"
+                    android:clipToPadding="false"
+                    android:scrollbars="vertical"
+                    app:layout_constraintTop_toBottomOf="@+id/trailer"
+                    app:layout_constraintLeft_toLeftOf="parent"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </ScrollView>
+    </LinearLayout>
 </RelativeLayout>
