--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,50 +1,156 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:fitsSystemWindows="true">
+    tools:context=".DetailActivity">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appbar"
+        android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/detail_backdrop_height"
-        android:fitsSystemWindows="true"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true">
+
         <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar"
+            android:id="@+id/collapsing_toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleMarginEnd="64dp"
-            app:expandedTitleMarginStart="48dp"
-            app:expandedTitleTextAppearance="@android:color/transparent"
+            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
+            app:contentScrim="@color/colorPrimary"
+            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <RelativeLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:layout_collapseMode="parallax">
-                <ImageView
-                    android:id="@+id/thumbnail_image_header"
+                android:background="@color/blue_grey_dark">
+
+                <FrameLayout
+                    android:id="@+id/frame"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:fitsSystemWindows="true"
-                    android:scaleType="centerCrop" />
-            </RelativeLayout>
+                    android:layout_height="256dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <ImageView
+                        android:id="@+id/image_movie_backdrop"
+                        android:layout_width="match_parent"
+                        android:layout_height="256dp"
+                        android:contentDescription="Movie backdropPath"
+                        android:fitsSystemWindows="true"
+                        android:scaleType="centerCrop"
+                        app:layout_collapseMode="parallax"
+                        tools:src="@tools:sample/backgrounds/scenic" />
+
+                    <!-- Play button image -->
+                    <ImageView
+                        android:id="@+id/iv_play_circle"
+                        android:layout_width="@dimen/size_play_image"
+                        android:layout_height="@dimen/size_play_image"
+                        android:layout_gravity="center_horizontal|center_vertical"
+                        android:background="@drawable/play_circle"
+                        android:contentDescription="@string/play_content_description"
+                        android:visibility="invisible" />
+
+                </FrameLayout>
+
+                <TextView
+                    android:id="@+id/tv_detail_title"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/source_sans_pro_semi_bold"
+                    android:paddingLeft="@dimen/padding_activity"
+                    android:paddingTop="@dimen/padding_activity_small"
+                    android:paddingRight="@dimen/padding_activity"
+                    android:paddingBottom="@dimen/padding_activity_small"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="@android:color/white"
+                    app:layout_constraintEnd_toStartOf="@+id/fab"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/frame"
+                    tools:text="movie title" />
+
+                <TextView
+                    android:id="@+id/tv_runtime"
+                    style="@style/BasicTextStyle"
+                    android:paddingLeft="@dimen/padding_activity"
+                    android:paddingRight="@dimen/padding_activity"
+                    android:textColor="@color/blue_grey_light"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_title"
+                    tools:text="122 min" />
+
+                <TextView
+                    android:id="@+id/tv_release_year"
+                    style="@style/BasicTextStyle"
+                    android:textColor="@color/blue_grey_light"
+                    app:layout_constraintLeft_toRightOf="@+id/tv_runtime"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_title"
+                    tools:text="2018" />
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_runtime">
+
+                    <TextView
+                        android:id="@+id/tv_genre"
+                        style="@style/BasicTextStyle"
+                        android:paddingLeft="@dimen/padding_activity"
+                        android:paddingRight="@dimen/padding_activity"
+                        android:paddingBottom="@dimen/padding_activity_small"
+                        android:textColor="@color/blue_grey_200_light"
+                        tools:text="Action, Adventure, Animation, Family" />
+
+                    <!-- ProgressBar to show the user content is loading -->
+                    <ProgressBar
+                        android:id="@+id/pb_detail_loading_indicator"
+                        android:layout_width="@dimen/size_detail_loading_indicator"
+                        android:layout_height="@dimen/size_detail_loading_indicator"
+                        android:layout_gravity="center"
+                        android:visibility="invisible" />
+
+                </FrameLayout>
+
+                <!-- Favorite button to mark a movie as a Favorite or UnFavorite -->
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/fab"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/margin_activity"
+                    app:backgroundTint="@color/color_fab"
+                    app:layout_constraintBottom_toBottomOf="@+id/frame"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/frame" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="?android:attr/actionBarSize"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                 app:layout_collapseMode="pin"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
-
-            </androidx.appcompat.widget.Toolbar>
+                app:navigationIcon="@drawable/ic_arrow_back_black_24dp" />
         </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+        <!-- Provides a horizontal layout to display tabs -->
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tab_layout"
+            style="@style/CategoryTab"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/blue_grey_dark"
+            app:tabMode="scrollable" />
+
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/content_detail"/>
+    <include
+        android:id="@+id/content_detail"
+        layout="@layout/content_detail" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
