--- a/app/src/main/res/layout/movie_card.xml
+++ b/app/src/main/res/layout/movie_card.xml
@@ -1,53 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:id="@+id/card_view"
+    layout_height=""
+    android:layout_width="125dp"
+    android:layout_height="230dp"
+    android:layout_margin="@dimen/card_margin"
+    android:background="@color/md_grey_900"
+    android:elevation="3dp"
+    app:cardBackgroundColor="@color/md_grey_900"
+    app:cardCornerRadius="@dimen/card_movie_radius">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/card_view"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_margin="@dimen/card_margin"
-        android:elevation="3dp"
-        app:cardCornerRadius="@dimen/card_movie_radius">
+        android:layout_height="match_parent">
 
-        <RelativeLayout
+        <ImageView
+            android:id="@+id/thumbnail"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="180dp"
+            android:background="?attr/selectableItemBackground"
+            android:scaleType="fitXY"  />
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/movie_cover_height"
-                android:id="@+id/thumbnail"
-                android:background="?attr/selectableItemBackground"
-                android:scaleType="fitXY"/>
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/thumbnail"
-                android:paddingLeft="@dimen/movie_title_padding"
-                android:paddingRight="@dimen/movie_title_padding"
-                android:paddingTop="@dimen/movie_title_padding"
-                android:textColor="@color/movie_title"
-                android:textSize="@dimen/movie_title" />
-            <TextView
-                android:id="@+id/rating"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/title"
-                android:paddingLeft="@dimen/movie_title_padding"
-                android:paddingRight="@dimen/movie_title_padding"
-                android:paddingTop="@dimen/movie_title_padding"
-                android:textColor="@color/colorAccent"
-                android:textSize="@dimen/user_rating"
-                />
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@+id/thumbnail"
+            android:maxLines="2"
+            android:paddingLeft="@dimen/movie_title_padding"
+            android:paddingTop="@dimen/movie_title_padding"
+            android:paddingRight="@dimen/movie_title_padding"
+            android:text="Movie Name Ofkfjaklsjdf"
+            android:textColor="@color/md_white_1000"
+            android:textSize="15sp" />
 
-        </RelativeLayout>
+    </RelativeLayout>
 
-    </androidx.cardview.widget.CardView>
-
-</LinearLayout>
+</androidx.cardview.widget.CardView>
