--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,10 +2,10 @@
 <resources>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="movie_title_padding">10dp</dimen>
+    <dimen name="movie_title_padding">5dp</dimen>
     <dimen name="movie_title">15sp</dimen>
     <dimen name="movie_cover_height">160dp</dimen>
-    <dimen name="card_movie_radius">0dp</dimen>
+    <dimen name="card_movie_radius">10dp</dimen>
     <dimen name="card_margin">5dp</dimen>
     <dimen name="user_rating_padding_bottom">5dp</dimen>
     <dimen name="user_rating">12sp</dimen>
@@ -14,4 +14,59 @@
     <dimen name="layout_margin_top">3dp</dimen>
     <dimen name="layout_margin_top2">10dp</dimen>
     <dimen name="padding_layout">16dp</dimen>
+    <item name="low_speed" type="dimen" format="float">120</item>
+    <item name="normal_speed" type="dimen" format="float">100</item>
+
+    <dimen name="padding_activity">16dp</dimen>
+    <dimen name="padding_activity_large">48dp</dimen>
+
+    <dimen name="padding_activity_small">8dp</dimen>
+    <dimen name="margin_activity_small">8dp</dimen>
+    <dimen name="padding_activity_option">4dp</dimen>
+
+    <!-- Common margin value used through out the app -->
+    <dimen name="margin_activity">16dp</dimen>
+
+    <!-- Margin for fragment info -->
+    <dimen name="margin_vote_average">84dp</dimen>
+    <dimen name="margin_vote_ten">4dp</dimen>
+    <dimen name="margin_vote_count">24dp</dimen>
+    <dimen name="margin_cast">40dp</dimen>
+    <dimen name="margin_director">@dimen/margin_cast</dimen>
+    <dimen name="padding_vote_average_label">4dp</dimen>
+    <dimen name="margin_detail">24dp</dimen>
+
+    <!-- Size of ImageView in fragment info-->
+    <dimen name="size_person_image">18dp</dimen>
+    <dimen name="size_star_image">48dp</dimen>
+
+    <!-- Size of ImageView in trailer list item -->
+    <dimen name="width_trailer_image">300dp</dimen>
+    <dimen name="height_trailer_image">200dp</dimen>
+
+    <!-- Margin for the CardView in fragment_info -->
+    <dimen name="margin_card_view">0.05dp</dimen>
+
+    <!-- Padding for the TextView in movie_list_item -->
+    <dimen name="padding_list_text">4dp</dimen>
+
+    <!-- Size of the loading indicator in the activity_detail -->
+    <dimen name="size_detail_loading_indicator">26dp</dimen>
+    <!-- Size of play circle ImageView in the activity_detail -->
+    <dimen name="size_play_image">60dp</dimen>
+
+    <!-- Size of the cast image in the cast_list_item -->
+    <dimen name="width_cast_image">72dp</dimen>
+    <dimen name="height_cast_image">84dp</dimen>
+    <!-- Margin for the cast name TextView in the cast_list_item -->
+    <dimen name="margin_cast_name">24dp</dimen>
+    <!-- Margin for the cast character TextView in the cast_list_item -->
+    <dimen name="margin_cast_character">@dimen/margin_cast_name</dimen>
+    <!-- Height of the divider in the cast_list_item -->
+    <dimen name="height_divider">0.1dp</dimen>
+
+    <!-- CardView-->
+    <dimen name="card_corner_radius">0dp</dimen>
+    <dimen name="card_elevation">0.7dp</dimen>
+    <dimen name="card_max_elevation">1dp</dimen>
 </resources>
