--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -1,24 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/review_container"
-    tools:context=".DetailActivity"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".DetailActivity">
 
     <!-- Only visible when there are no reviews -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_review"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/blue_grey_dark" />
+        android:background="@color/blue_grey_dark"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
-    <TextView
-        android:id="@+id/tv_no_reviews"
-        style="@style/MessageTextStyle"
-        android:drawableTop="@drawable/comment"
-        android:text="@string/message_no_reviews"
-        android:textColor="@color/blue_grey_200_light" />
+<!--    <-->
+<!--        android:id="@+id/sc_no_reviews"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:background="@color/blue_grey_dark"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        android:visibility="invisible">-->
+        <LinearLayout
+            android:id="@+id/view_no_reviews"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="200dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent">
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                app:srcCompat="@drawable/comment"
+                android:layout_gravity="center"
+                android:tint="@color/color_offline"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/message_no_reviews"
+                android:textColor="@color/color_offline"
+                android:textSize="16sp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:paddingHorizontal="50dp"/>
+        </LinearLayout>
 
-</FrameLayout>
+<!--    </>-->
+</androidx.constraintlayout.widget.ConstraintLayout>
